--- a/09-05.Januar/main.tex
+++ b/09-05.Januar/main.tex
@@ -1,7 +1,7 @@
 \input{header.tex}
 
 \subject{Versuch: 354}
-\title{gedämpfte und erzwungene Schwingungen}
+\title{Gedämpfte und erzwungene Schwingungen}
 \date{
   Durchführung: 05.01.2016
   \hspace{3em}
