--- a/09-05.Januar/content/durchfuehrung.tex
+++ b/09-05.Januar/content/durchfuehrung.tex
@@ -35,7 +35,7 @@ In der Abbildung \ref{fig:Durch3} ist eine Schaltung aufgebaut, mit welcher die 
   \label{fig:Durch3}
 \end{figure}
 
-Auf dem Oszilloskop wird nun, wie in Abbildung \ref{fig:Durch4} schematisch dargestellt, die Erreger- und die Kondensatorspannung gegen die Zeit aufgetragen. Daraufhin wird die Frequenz $\nu$ am Sinusgenerator im Berreich von (1 - 100000)Hz variiert. Dabei werden etwa 30 Wertepaare aus der Spannung $U_\text{C}$, der Frequenz $\nu$ und der Phasenverschiebung $\Phi$ notiert. Der Bereich um die Resonanzfrequenz wird in kleineren Schritten gemessen, weil diese in der Auswertung genauer betrachtet werden soll. Für die Phasenverschiebung $\Phi$ wird der zeitliche Unterschied der Null durchgänge $a$ gemessen und die Periodenlänge $b$ aus der Frequenz $\nu$ berechnet.   
+Auf dem Oszilloskop wird nun, wie in Abbildung \ref{fig:Durch4} schematisch dargestellt, die Erreger- und die Kondensatorspannung gegen die Zeit aufgetragen. Daraufhin wird die Frequenz $\nu$ am Sinusgenerator im Berreich von 1 Hz bis 100 kHz variiert. Dabei werden etwa 30 Wertepaare aus der Spannung $U_\text{C}$, der Frequenz $\nu$ und der berechneten Phasenverschiebung $\Phi$ notiert. Der Bereich um die Resonanzfrequenz wird in kleineren Schritten gemessen, weil diese in der Auswertung genauer betrachtet werden soll. Für die Phasenverschiebung $\Phi$ wird der zeitliche Unterschied der Nulldurchgänge $a$ gemessen und die Periodenlänge $b$ aus der Frequenz $\nu$ berechnet.   
 
 \begin{figure}
   \centering
