--- a/09-05.Januar/content/auswertung.tex
+++ b/09-05.Januar/content/auswertung.tex
@@ -4,8 +4,8 @@ Die für den Versuch relevanten Bauteile haben die Werte
 \begin{eqnarray}
   L 	&= (\num{16.78 +- 0.09}) \text{mH}	\\
   C 	&= (\num{2.066 +- 0.006}) \text{nF}	\\
-  R_1 	&= (\num{67.2 +- 0.2}) \text{\Omega}	\\
-  R_2 	&= (\num{682 +- 1}) \text{\Omega}
+  R_1 	&= (\num{67.2 +- 0.2}) \Omega	\\
+  R_2 	&= (\num{682 +- 1}) \Omega
   \label{eqn:Bau}
 \end{eqnarray}
 Für den Versuch 3.2 wurde aufgrund eines Defektes des regelbaren Widerstands der Aufbau gewechselt. Die Daten für den Aufgabenteil sind,\begin{eqnarray}
@@ -52,15 +52,15 @@ Die Einhüllende und die Messdaten sind in Abbildung \ref{fig:Osz} dargestellt.
 \end{figure}
 Nach Formel \ref{eqn:mu} und \ref{eqn:tex} lässt sich der effektive Dämpfungswiderstand sowie die Abklingdauer berechnen.
 \begin{eqnarray}
-  R_\text{eff} = ( \num{140 +- 10}) \, \text{\Omega} \\
+  R_\text{eff} = ( \num{140 +- 10}) \, \Omega \\
   T_\text{ex} = ( \num{230 +- 10}) \cdot 10^{-6} \, \text{s}
   \label{eqn:Reff}
 \end{eqnarray}
-Der praktisch bestimmte Wert weicht vom errechneten Wert um 75 \Omega ab. Dies lässt sich einerseits dadurch erklären, dass der Innenwiderstand von 50 \Omega nicht berücksichtigt wurde. Andererseits kann es bei der gewählten Frequenz zu Impedanzen der verschiedenen Bauteile gekommen sein. Für die weiteren Aufgaben wird der Widerstand des Generators berücksichtigt.
+Der praktisch bestimmte Wert weicht vom errechneten Wert um 75 $\Omega$ ab. Dies lässt sich einerseits dadurch erklären, dass der Innenwiderstand von 50 $\Omega$ nicht berücksichtigt wurde. Andererseits kann es bei der gewählten Frequenz zu Impedanzen der verschiedenen Bauteile gekommen sein. Für die weiteren Aufgaben wird der Widerstand des Generators berücksichtigt.
 \subsection{Dämpfungswiderstand des Aperiodischen Grenzfalls}
 Der im Experiment bestimmte Widerstand, bei dem der Aperiodische Grenzfall eintritt, beträgt
 \begin{equation}
-  R_\text{Praxis} = 1.25 \, \text{\Omega} \ .
+  R_\text{Praxis} = 1.25 \, \Omega \ .
   \label{eqn:Rprax}
 \end{equation}
 Der Theoretische Widerstand wird mittels Formel \ref{eqn:Rap} ausgerechnet und beträgt
@@ -69,7 +69,7 @@ Der Theoretische Widerstand wird mittels Formel \ref{eqn:Rap} ausgerechnet und b
   \label{eqn:Rthe}
 \end{equation}
 Zwischen dem theoretisch und dem praktisch ermittelten Wert ist eine Differenz von \\
-1.5 \Omega. Mögliche Ursachen für den Fehler sind, die vernachlässigte Impedanz des Aufbaus, als auch die Schwierigkeit den Punkt des Aperiodischen Grenzfalls zu treffen, da keine wesentliche Änderung zu erkennen sind.
+1.5 $\Omega$. Mögliche Ursachen für den Fehler sind, die vernachlässigte Impedanz des Aufbaus, als auch die Schwierigkeit den Punkt des Aperiodischen Grenzfalls zu treffen, da keine wesentliche Änderung zu erkennen sind.
 \subsection{Frequenzabhängigkeit der Kondensatorspannung eines  Serienresonanzkreis}
 In Tabelle \ref{tab:U_c} sind die Spannung am Kondensator und die entsprechenden Frequenzen hinterlegt. Bei den Frequenzen wird ein Ablesefehler von 0.1 V angenommen, da immer auf die erste Stelle nach dem Kommer auf- bzw. abgerundet wird.
 \begin{table}
