--- a/09-05.Januar/content/theorie.tex
+++ b/09-05.Januar/content/theorie.tex
@@ -141,6 +141,7 @@ berücksichtigt wird, folgt die Breite zu:
 Die Güte folgt damit zu:
 \begin{equation}
 	q = \frac{\omega_0}{\omega_+ - \omega_-}
+	\ref{eqn:qbreite}
 \end{equation}
 
 
