--- a/09-05.Januar/content/auswertung.tex
+++ b/09-05.Januar/content/auswertung.tex
@@ -258,3 +258,15 @@ Die Güte berechnet sich aus Formel \ref{eqn:qbreite} und beträgt
   \label{eqn:q3}
 \end{equation}
 Dies entspricht einer prozentualen Abweichung von 4.5 \% vom Theoriewert.
+
+\subsection{Verzögerungszeit eines Koaxialkabels}
+Die Verzögerungszeit eines Koaxialkabels lässt sich über die Ausbreitungsgeschwindigkeit berechnen. Von Licht bzw. elektromagnetischen Wellen ist diese, im Vakuum, geben mit ca. 300.000 $\frac{\text{km}}{\text{s}}$. Außerdem wird der Verkürzungsfaktor benötigt, welcher sich wie folgt berechnen lässt
+\begin{equation*}
+  \frac{1}{\sqrt{\epsilon_\text{r}}} \ ,
+\end{equation*}
+wobei $\epsilon_\text{r}$ die Permittivität des Kabeldielektrikums ist.
+In Koaxialkabeln wird häufig Polyethylen verwendet welches eine Permittivität von $\epsilon_\text{r} = 2.25$ besitzt. Damit folgt für den Verkürzungsfaktor:
+\begin{equation*}
+  \frac{1}{\sqrt{\epsilon_\text{r}}} = 0.667 \ .
+\end{equation*}
+Daraus ergibt sich eine Ausbreitungsgeschwindigkeit von etwa 200.000 $\frac{\text{km}}{\text{s}}$ und die Verzögerungszeit berechnet sich ungefähr zu 5 $\frac{\text{ns}}{\text{m}}$.
