Einmal bitte durchlesen

--- a/09-05.Januar/content/auswertung.tex
+++ b/09-05.Januar/content/auswertung.tex
@@ -128,7 +128,7 @@ Anhand derer und der Abbildung \ref{fig:logUc} lässt sich die Güte ablesen.
   \caption{Halblogaritmisch aufgetragene Kondensatorspannung gegen die Frequenz}
   \label{fig:logUc}
 \end{figure}
-Er beträgt
+Sie beträgt
 \begin{equation}
   q_\text{exp1} = \num{4.30 +- 0.01} \ .
   \label{eqn:qexp}
@@ -254,7 +254,7 @@ Analog wird mit den Werten für $\nu_1$ und $\nu_2$ vorgangen.
 \end{eqnarray}
 Die Güte berechnet sich aus Formel \ref{eqn:qbreite} und beträgt
 \begin{equation}
-  q_\text{exp3} = \{ref{4 +- 2}  \ .
+  q_\text{exp3} = \num{4 +- 2}  \ .
   \label{eqn:q3}
 \end{equation}
 Dies entspricht einer prozentualen Abweichung von 4.5 \% vom Theoriewert.
