--- a/09-05.Januar/content/diskussion.tex
+++ b/09-05.Januar/content/diskussion.tex
@@ -1,3 +1,14 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+Bei allen Experimenten wird die Länge des Koaxialkabels vernachlässigt, da der Phasenunterschied bei Messgrößen im k Hz Bereich vernachlässigbar gering ist.
+\subsection{Zeitabhänigkeit der Amplitude und Dämpfungswiderstand einer Gedämpften Schwingung}
+Aufgrund eines Rauschens des Signals welches auf das Oszilloskop ausgegeben wird, kommt es dazu das der Fit die Spannungpeaks nicht immer ganu trifft. Als Konsequenz dessen sind die Fehler relativ (f =  ~10 \%) groß und die abgeleiteten Größen infolge dessen auch Fehlerbehaftet.
+\subsection{Frequenzabhängigkeit der Kondensatorspannung eines
+Serienresonanzkreis}
+Auffällig ist das alle bis auf 3 Messwerteunterhalb von 10 kHz oberhalb der theoretischen Spannung liegen. Aufgrund der ungenauigkeit beim ablesen der Resonanzfrequenz, als auch der ``Halbwertszeiten'' kommt es zu Fehlern von 3 und 6.9 \%. Dabei ist die Messung welche über die Resonanzfrequenz erfolgt genauer, da es einfacher ist das Maximum dem Diagramm zu entnehmen als ein Halbwertsbreite exakt abzulesen. 
 Alle experimentell ermittelten Messwerte liegen in etwa im Toleranzbereich der Messgrößen, bis auf die Güte. Es scheint so, als ob ein systematischer Fehler vorliegt. Ausschließlich bei f $\rightarrow \infty $ und f $\rightarrow 0$ wird der Erwatungswert erfüllt.
+\subsection{Frequenzabhängigkeit der Phase zwischen Erreger- und
+Kondensatorspannung}
+Unter Betrachtung der Abbildung 10 fällt auf, das der Wert bei ~40 kHz aus der Messreihe sticht. Scheinbar handelt es sich dabei um einen Messfehler. Auch hier liegen die Werte bis 10 kHz nicht genau auf dem Fit. Eine  mögliche Ursache dafür ist das der arctan erst im Grenzwert - $\nu$ $\rightarrow$ 0 strebt. Der Fehler der Fitfunktion hatt zu Folge das die berechnete Güte die größte Messunsicherheit aller experimentell bestimmten Güten hatt. Jedoch weicht der Mittelwert lediglich um 4.5 \% ab. 
+\subsection{Vergleich der Messmethoden}
+Ein Vergleich der drei Messmethoden ist nicht direkt möglich. Zwei der drei Methoden beruhen auf dem ähnlichen System aus der Resonanzfrequenz und den ``Halbwertszeiten'' die Güte zu bestimmen. Lediglich die Methode mittels Resonanzfrequenz die Güte unterscheidet sich von diesen. Sie scheint am praktikabelsten für eine schnelle Messung, jedoch müssen auch bei dieser Methode die Kapizität als auch der wiederstand bekannt seien. Im Umkehrschluss ist es Vorteilhaft einer der anderen beiden Methoden zu benutzen falls diese unbekannt sind. Ein möglicher Nachteil der Methode welche auf der Phasenverschiebung beruht, gegenüber der mittels der Kondensatorspannung, ist dass für diesen ein Zwei-Kanal-Oszilloskop benötigt wird wohingegen bei der anderen ein Ein-Kanal-Oszilloskop ausreicht.
